--- a/css/admin.css
+++ b/css/admin.css
@@ -4,6 +4,14 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+h1 {
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+
+    font-family: cursive;
+    font-size: 40px;
+    color: #272768;
+}
+
 .wrapper {
     padding: 1%;
     width: 80%;
